[workspace]
members = [".", "tnuctipun-derive"]
exclude = []

[package]
name = "tnuctipun"
version = "0.1.0"
edition = "2024"
description = "The Tnuctipun of Ringworld — ancient, subversive, ingenious — or a type-safe MongoDB builder library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cchantep/tnuctipun"
documentation = "https://docs.rs/tnuctipun"
keywords = ["mongodb", "database", "query", "type-safe", "derive"]
categories = ["database"]
authors = ["Cédric Chantepie <cchantep@users.noreply.github.com>"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "tnuctipun"
path = "src/main.rs"
required-features = ["mongodb-client"]

[dependencies]
chrono = "0.4"
frunk = "0.4.4"
futures = "0.3.31"
bson = "2.15.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
tnuctipun-derive = { version = "0.1.0", path = "./tnuctipun-derive" }

# MongoDB client is only needed for the binary, not the library
mongodb = { version = "3.2.4", optional = true }
num-traits = "0.2.19"

[features]
default = []
mongodb-client = ["mongodb"]

[dev-dependencies]
trybuild = "1.0.108"
