[workspace]
members = [".", "tnuctipun-derive"]
exclude = []

[package]
name = "tnuctipun"
version = "0.1.1"
edition = "2024"
description = "The Tnuctipun of Ringworld — ancient, subversive, ingenious — or a type-safe MongoDB builder library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cchantep/tnuctipun"
documentation = "https://docs.rs/tnuctipun"
keywords = ["mongodb", "database", "query", "type-safe", "derive"]
categories = ["database"]
authors = ["Cédric Chantepie <cchantep@users.noreply.github.com>"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
frunk = "0.4.4"
bson = { version = "3.0.0", features = ["serde"] }
serde = { version = "1.0.226", features = ["derive"] }
tnuctipun-derive = { version = "0.1.1", path = "./tnuctipun-derive" }
num-traits = "0.2.19"

[features]
default = []

[dev-dependencies]
trybuild = "1.0.111"
