[package]
name = "tnuctipun-derive"
version = "0.1.1"
edition = "2024"
description = "Derive macros for the Tnuctipun MongoDB type-safe query builder library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cchantep/tnuctipun"
documentation = "https://docs.rs/tnuctipun-derive"
readme = "README.md"
keywords = ["mongodb", "database", "derive", "macro", "type-safe"]
categories = ["database"]
authors = ["Cédric Chantepie <cchantep@users.noreply.github.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
